--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   },
   "devDependencies": {
     "browser-sync": "^2.27.11",
+    "clean-css": "^5.3.1",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "pug": "^3.0.2",
